# dna-openenv

./: Dockerfile  README.md  app.py  inference.py  knowledge_graph_env.py  openenv.yaml  pyproject.toml  requirements.txt
.github/workflows/: sync-to-hf.yml
dna_env/: client.py
